[tool.poetry]
name = "food-desert-atx"
version = "0.1.0"
description = "15 minute grocery store map of Austin, TX"
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "food_desert_atx"}]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.1"
pandas = "^2.0.3"
geopandas = "^0.13.2"
osmnx = "^1.6.0"
shapely = "^2.0.1"
scikit-learn = "^1.3.0"
folium = "^0.14.0"
matplotlib = "^3.7.2"
mapclassify = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
